Update with latest changes

--- a/index.html
+++ b/index.html
@@ -398,6 +398,17 @@
                 </div>
               </div>
             </div>
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item react">
+              <div class="portfolio-content h-100 w-100">
+                <img src="images/movie1.png" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4 class="project-number">Project 5</h4>
+                  <p style="padding-top: 20px;">Movie Flex</p>
+                  <a href="images/movie1.png" title="Movie Flex" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="movieflexdetails.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
